--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@
         <p class="caixas">
           Pedro Henrique da Silva Malaquias
         </p>
+        <p class="caixas">
+          Jonatas Silva Peraza
+        </p>
       </div>
     </div>
   </div>
@@ -247,7 +250,7 @@
         <img src="Imagens/fotoParaEletricidade.jpeg" class="temas" alt="">
       </div>
     </a>
-    <a href="CorrentesEletricas.html">
+    <a href="correntes_eletricas.html">
       <div id="caixaCorrentes">
         <p><strong class="cabeca12-white">Correntes Elétricas</strong></p>
         <img src="Imagens/corretens.jpeg" class="temas" alt="">
@@ -259,7 +262,7 @@
         <img src="Imagens/optica1.png" class="temas" alt="">
       </div>
     </a>
-    <a href="TermoFisica.html">
+    <a href="termo_fisica.html">
       <div id="caixaTermofisica">
         <p><strong class="cabeca12-white">TermoFísica</strong></p>
         <img src="Imagens/termometro-5c3e0e41d5615.webp" class="temas" alt="">
@@ -281,23 +284,13 @@
       <div class="display: grid">
         <!-- <h1 id="destaque"><strong class="cabeca2"> Vou Te Mostrar Que Física Não É Chata!</strong></h1> -->
 
-        <p class="textos">A física é uma ciência fascinante que nos permite compreender as leis fundamentais da natureza
-          e
-          explorar os segredos do universo. Ela abrange desde o movimento dos planetas até as partículas subatômicas.
-          Além disso, a física está presente em nossa vida cotidiana, sendo responsável por tecnologias inovadoras como
-          eletricidade, mecânica automotiva e computação.
+        <p class="textos">A física é uma ciência fascinante que nos permite compreender as leis fundamentais da natureza e explorar os segredos do universo. Ela abrange desde o movimento dos planetas até as partículas subatômicas. Além disso, a física está presente em nossa vida cotidiana, sendo responsável por tecnologias inovadoras como eletricidade, mecânica automotiva e computação.
         </p>
 
-        <p class="textos">Ao
-          estudar física, podemos desvendar fenômenos surpreendentes como gravidade, eletromagnetismo e mecânica
-          quântica.
+        <p class="textos">Ao estudar física, podemos desvendar fenômenos surpreendentes como gravidade eletromagnetismo e mecânica quântica.
         </p>
 
-        <p class="textos"> A física promove a criatividade e o pensamento crítico, ou seja, a criação/formulação de
-          hipóteses científicas,
-          a experimentação e a análise de dados. A física está em constante evolução, com novas teorias e descobertas
-          que
-          desafiam constantemente o nosso conhecimento.</p>
+        <p class="textos">A física promove a criatividade e o pensamento crítico, ou seja, a criação/formulação de hipóteses científicas, a experimentação e a análise de dados. A física está em constante evolução, com novas teorias descobertas que desafiam constantemente o nosso conhecimento.</p>
 
       </div>
 
