--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
         </div>
       </div>
 
-      <div class="caixas">
-        <div id="caixa1">
+      <section class="caixas">
+        <div class="caixa">
           <strong class="cabeca1">Porque Você Deve Estudar Física?</strong>
 
           <p class="caixas">
@@ -188,7 +188,7 @@
           </p>
         </div>
 
-        <div id="caixa2">
+        <div class="caixa">
           <strong class="cabeca1">
             Quais os Principais Assuntos do Site?</strong
           >
@@ -203,7 +203,7 @@
           <p class="caixas">Optica</p>
         </div>
 
-        <div id="caixa4">
+        <div class="caixa">
           <strong class="cabeca1">Quem Fez o Site?</strong>
           <div class="center">
             <p class="caixas">Anthony Gabriel Loche dos Reis</p>
@@ -214,70 +214,71 @@
             <p class="caixas">Jonatas Silva Peraza</p>
           </div>
         </div>
-      </div>
+      </section>
 
       <div class="center">
-        <h1><strong class="cabeca-white"> Assuntos </strong></h1>
+        <h3><strong class="cabeca-white"> Assuntos </strong></h3>
       </div>
-
-      <div id="temas">
+<ul>
+      <section id="temas">
         <a href="Ondas.html">
-          <div id="caixaOndas">
+          <li class="caixasTemas">
             <p><strong class="cabeca12-white">Ondas</strong></p>
             <img src="Imagens/ondas_alfa.jpg" class="temas" alt="" />
-          </div>
+          </li>
         </a>
         <a href="leis_de_newton.html">
-          <div id="caixaLeis">
+          <li class="caixasTemas">
             <p><strong class="cabeca12-white">Leis de Newton</strong></p>
             <img
               src="Imagens/as-leis-newton-estao-entre-as-mais-importantes-leis-fisica-sao-usadas-para-determinar-dinamica-dos-corpos-5bb2703f333e2.webp"
               class="temas"
               alt=""
             />
-          </div>
+          </li>
         </a>
         <a href="Mecanica.html">
-          <div id="caixaMecanica">
+          <li class="caixasTemas">
             <p><strong class="cabeca12-white">Mecânica</strong></p>
             <img src="Imagens/montanharussa.jpeg" class="temas" alt="" />
-          </div>
+          </li>
         </a>
         <a href="Energia.html">
-          <div id="caixaEnergia">
+          <li class="caixasTemas">
             <p><strong class="cabeca12-white">Energia</strong></p>
             <img src="Imagens/energia.webp" class="temas" alt="" />
-          </div>
+          </li>
         </a>
         <a href="Eletricidade.html">
-          <div id="caixaEletricidade">
+          <li class="caixasTemas">
             <p><strong class="cabeca12-white">Eletricidade</strong></p>
             <img src="Imagens/fotoParaEletricidade.jpeg" class="temas" alt="" />
-          </div>
+          </li>
         </a>
         <a href="correntes_eletricas.html">
-          <div id="caixaCorrentes">
+          <li class="caixasTemas">
             <p><strong class="cabeca12-white">Correntes Elétricas</strong></p>
             <img src="Imagens/corretens.jpeg" class="temas" alt="" />
-          </div>
+          </li>
         </a>
         <a href="Optica.html">
-          <div id="caixaOptica">
+          <li class="caixasTemas">
             <p><strong class="cabeca12-white">Optica</strong></p>
             <img src="Imagens/optica1.png" class="temas" alt="" />
-          </div>
+          </li>
         </a>
         <a href="termo_fisica.html">
-          <div id="caixaTermofisica">
+          <li class="caixasTemas">
             <p><strong class="cabeca12-white">TermoFísica</strong></p>
             <img
               src="Imagens/termometro-5c3e0e41d5615.webp"
               class="temas"
               alt=""
             />
-          </div>
+          </li>
         </a>
-      </div>
+      </section>
+      </ul>
       <div class="imagemEs">
         <div class="texto1">
           <img src="Imagens/atomo.png" alt="" class="veio" />
