Vim fazer um aviso

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       </div>
 <ul>
       <section id="temas">
-        <a href="Ondas.html">
+        <a href="ondas.html">
           <li class="caixasTemas">
             <p><strong class="cabeca12-white">Ondas</strong></p>
             <img src="Imagens/ondas_alfa.jpg" class="temas" alt="" />
