arrumando as tag figure e os títulos

--- a/correntes_eletricas.html
+++ b/correntes_eletricas.html
@@ -155,7 +155,7 @@
   </header>
 
   <main class="conteudo margemParaMain">
-    <div class="center"><h1 style="font-size: 12pt;">CORRENTES ELÉTRICAS</h1></div>
+    <h1 class="titulos" style="font-size: 12pt;">CORRENTES ELÉTRICAS</h1>
     <p class="margemEntreTextos">
     <blockquote>“A corrente elétrica designa o movimento ordenado de cargas elétricas, partículas eletrizadas chamadas
       de íons ou elétrons, dentro de um sistema condutor”(GOUVEIA, 2023).</blockquote>
@@ -202,7 +202,9 @@
       um determinado período de tempo, no (SI) a intensidade é medida em Ampère (A), a intensidade pode ser calculada
       através da fórmula (ALVES, 2023):</p>
     <div class="center margemEntreTextos">
-      <img src="Imagens/formula.png" alt="formula">
+      <figure>
+        <img src="Imagens/formula.png" alt="formula">
+      </figure>
     </div>
 
     <p class="margem margemEntreTextos">Onde,
@@ -228,7 +230,7 @@
     </p>
     <p class="margem"> ∆t: variação do tempo (h)
     </p>
-    <h1 class="margemEntreTextos" style="margin-left: 3cm ;"> Refêrencias </h1>
+    <h1 class="margemEntreTextos titulos" style="margin-left: 3cm ;"> Refêrencias </h1>
     <p class="margemEntreTextos" style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;">ALVES, Pedro. <strong
         class="bibliografia">“O que
         é corrente elétrica? Fórmulas e características”</strong>. “Manual da Eletrônica”. Disponível em: O que é
@@ -245,17 +247,17 @@
       https://brasilescola.uol.com.br/fisica/corrente-eletrica.htm. Acesso em 23 de março de 2023.
     </p>
   </main>
-  
+
   <footer class="rodape">
     <div class="texto-rodape">
       <div class="parte-rodape-esquerdo">
         <h4>Desenvolvedores:
         </h4>
         <strong class="cabeca12">
-          <p>Anthony Gabriel Loche dos Reis <br>
-          Claudio Anzini Neto <br>
-          Pedro Henrique da Silva Malaquias <br> 
-          Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+          <p>Anthony Gabriel Loche dos Reis </p>
+          <p>Claudio Anzini Neto </p>
+          <p>Pedro Henrique da Silva Malaquias </p>
+          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
         </strong>
       </div>
     </div>
