--- a/eletricidade.html
+++ b/eletricidade.html
@@ -154,7 +154,7 @@
     </div>
   </header>
   <main class="conteudo margemParaMain">
-    <h1 style="font-size: 12pt; text-align: center; margin-top: 15px;">ELETRICIDADE</h1>
+    <h1 class="titulos margemEntreTextos" style="font-size: 12pt;">ELETRICIDADE</h1>
     <p class="margem margemEntreTextos">
       A eletricidade pode ser definida como os fenómenos que ocorrem durante o desequilíbrio ou movimentação das cargas
       elétricas de um átomo, "uma propriedade inerente aos prótons e elétrons” (HELERBROCK,2023).</p>
@@ -180,29 +180,33 @@
       (HELERBROCK,2023).
     </p>
     <div class="center margemEntreTextos">
-      <img src="Imagens/fotoParaEletricidade.jpeg" width="50%" alt="Foto Satelite">
+      <figure>
+        <img src="Imagens/fotoParaEletricidade.jpeg" width="50%" alt="Foto Satelite">
+      </figure>
 
     </div>
-    <div class="ref-imagens7">
-      <P>Fonte: HELERBROCK, 2023.
+    <figcaption>
+      <P class="ref-imagens7">Fonte: HELERBROCK, 2023.
       </P>
-    </div>
-    <h1 class="margemEntreTextos" style="margin-left: 3cm ;"> Refêrencias: </h1>
-    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5; margin-top: 20px; margin-bottom: 10px;">HELERBROCK, Rafael.
+    </figcaption>
+    <h1 class="margemEntreTextos titulos" style="margin-left: 3cm ;"> Refêrencias: </h1>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5; margin-top: 20px; margin-bottom: 10px;">HELERBROCK,
+      Rafael.
       <strong class="bibliografia">"Eletricidade"</strong> Brasil Escola. Disponível em:
       https://brasilescola.uol.com.br/fisica/eletricidade.htm. Acesso em 21 de agosto de 2023.
     </p>
   </main>
-  
+
   <footer class="rodape">
     <div class="texto-rodape">
-      <div class="parte-rodape-esquerdo"><h4>Desenvolvedores:
-          </h4>
+      <div class="parte-rodape-esquerdo">
+        <h4>Desenvolvedores:
+        </h4>
         <strong class="cabeca12">
-          <p>Anthony Gabriel Loche dos Reis <br>
-          Claudio Anzini Neto <br>
-          Pedro Henrique da Silva Malaquias <br>
-          Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+          <p>Anthony Gabriel Loche dos Reis </p>
+          <p>Claudio Anzini Neto </p>
+          <p>Pedro Henrique da Silva Malaquias </p>
+          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
         </strong>
       </div>
     </div>
