--- a/mecanica_re.html
+++ b/mecanica_re.html
@@ -153,75 +153,79 @@
     </div>
   </header>
   </div>
-    <main class="conteudo margemParaMain">
-<div class="center">
-    <h1 style="font-size: 15pt;"> MECÂNICA RELATIVISTA </h1>
-  </div>
-        <p class="margem margemEntreTextos">A mecânica relativista é a parte da física que estuda o movimento de objetos em altas velocidades próximas à
-            velocidade da luz. A mecânica relativista é baseada nas teorias da relatividade restrita, propostas por
-            Albert Einstein em 1905 e finalizada em 1915 com a teoria da relatividade geral.(GOUVEIA, 2023).</p>
+  <main class="conteudo margemParaMain">
 
-        <div class="center">
-          <h1 style="font-size: 15pt;"> RESTRITA </h1>
-        </div>
+    <h1 class="titulos" style="font-size: 15pt;"> MECÂNICA RELATIVISTA </h1>
+    <p class="margem margemEntreTextos">A mecânica relativista é a parte da física que estuda o movimento de objetos em
+      altas velocidades próximas à
+      velocidade da luz. A mecânica relativista é baseada nas teorias da relatividade restrita, propostas por
+      Albert Einstein em 1905 e finalizada em 1915 com a teoria da relatividade geral.(GOUVEIA, 2023).</p>
 
-        <p class="margem margemEntreTextos">
-            Segundo Prof. Rosimar Gouveia, a relatividade restrita diz que as leis da física são as mesmas para todos os
-            observadores em movimento uniforme (dinâmica estudada anteriormente na página), independentemente da
-            velocidade relativa entre eles. Isso significa que as leis da física devem levar em consideração que não
-            mudam com a velocidade do observador.(GOUVEIA, 2023).
-        </p>
-        <div class="center">
-          <h1 style="font-size: 15pt;"> GERAL </h1>
-        </div>
-        <p class="margem margemEntreTextos"> A teoria da relatividade geral leva em consideração um observador em movimento variável próximo a velocidade
-            da luz, o que a teoria da relatividade restrita não considerava. (GOUVEIA, 2023). Principal Fórmula: E= mc²
-        </p>
 
-        <p class="margem margemEntreTextos">E= energia em repouso.
-        </p>
-        <p class="margem margemEntreTextos"> m= massa.
-        </p>
-        <p class="margem margemEntreTextos"> c²= velocidade da luz no vácuo.</p>
-        <div class="center">
-          <p><strong class="bibliografia">Figura 2:</strong> ESPAÇO</p>
-          <img src="Imagens/fotorelatividade.jpg" alt="Isaac Newton" width="35%">
-        </div>
-        <div class="ref-imagens">Fonte: GOUVEIA, 2023.
-        </div>
-        <div class="center">
-          <h1 style="font-size: 15pt;"> CINEMÁTICO </h1>
-        </div>
-  
-      <p class="margem margemEntreTextos">A cinemática é uma parte da mecânica que estuda o movimento dos objetos, sem se preocupar com as causas desse
-        movimento, ou seja, sem considerar as forças que atuam sobre o objeto. A cinemática se preocupa em descrever o
-        movimento em termos de posição, velocidade e aceleração do objeto, bem como a trajetória que ele percorre.(DIAS,
-        2023).</p>
-  <div class="center">
-    <p><strong class="bibliografia">Figura 3:</strong> FORÇAS</p>
-    <img src="Imagens/fotomecanica2.webp" alt="Isaac Newton" width="35%">
-  </div>
-  <div class="ref-imagens">Fonte: GOUVEIA, 2023.
-  </div>
-</main>
+    <h1 class="titulos" style="font-size: 15pt;"> RESTRITA </h1 class="titulos">
 
-<footer class="rodape">
-  <div class="texto-rodape">
-    <div class="parte-rodape-esquerdo"><h4>Desenvolvedores:
-        </h4>
-      <strong class="cabeca12">
-        <p>Anthony Gabriel Loche dos Reis <br>
-        Claudio Anzini Neto <br>
-        Pedro Henrique da Silva Malaquias <br>
-        Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
-      </strong>
+
+    <p class="margem margemEntreTextos">
+      Segundo Prof. Rosimar Gouveia, a relatividade restrita diz que as leis da física são as mesmas para todos os
+      observadores em movimento uniforme (dinâmica estudada anteriormente na página), independentemente da
+      velocidade relativa entre eles. Isso significa que as leis da física devem levar em consideração que não
+      mudam com a velocidade do observador.(GOUVEIA, 2023).
+    </p>
+    <h1 class="titulos" style="font-size: 15pt;"> GERAL </h1>
+
+    <p class="margem margemEntreTextos"> A teoria da relatividade geral leva em consideração um observador em movimento
+      variável próximo a velocidade
+      da luz, o que a teoria da relatividade restrita não considerava. (GOUVEIA, 2023). Principal Fórmula: E= mc²
+    </p>
+
+    <p class="margem margemEntreTextos">E= energia em repouso.
+    </p>
+    <p class="margem margemEntreTextos"> m= massa.
+    </p>
+    <p class="margem margemEntreTextos"> c²= velocidade da luz no vácuo.</p>
+    <div class="center">
+      <figure>
+        <p><strong class="bibliografia">Figura 2:</strong> ESPAÇO</p>
+        <img src="Imagens/fotorelatividade.jpg" alt="Isaac Newton" width="35%">
+      </figure>
     </div>
-  </div>
+    <figcaption class="ref-imagens">Fonte: GOUVEIA, 2023.
+    </figcaption>
+    <h1 class="titulos" style="font-size: 15pt;"> CINEMÁTICO </h1>
+
+    <p class="margem margemEntreTextos">A cinemática é uma parte da mecânica que estuda o movimento dos objetos, sem se
+      preocupar com as causas desse
+      movimento, ou seja, sem considerar as forças que atuam sobre o objeto. A cinemática se preocupa em descrever o
+      movimento em termos de posição, velocidade e aceleração do objeto, bem como a trajetória que ele percorre.(DIAS,
+      2023).</p>
+    <div class="center">
+      <figure>
+        <p><strong class="bibliografia">Figura 3:</strong> FORÇAS</p>
+        <img src="Imagens/fotomecanica2.webp" alt="Isaac Newton" width="35%">
+      </figure>
+    </div>
+    <figcaption class="ref-imagens">Fonte: GOUVEIA, 2023.
+    </figcaption>
+  </main>
+
+  <footer class="rodape">
+    <div class="texto-rodape">
+      <div class="parte-rodape-esquerdo">
+        <h4>Desenvolvedores:
+        </h4>
+        <strong class="cabeca12">
+          <p>Anthony Gabriel Loche dos Reis</p>
+          <p>Claudio Anzini Neto</p>
+          <p>Pedro Henrique da Silva Malaquias</p>
+          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+        </strong>
+      </div>
+    </div>
 
 
-  <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif" alt="Logo IFC"
-        width="300px"></strong></div>
-</footer>
+    <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif" alt="Logo IFC"
+          width="300px"></strong></div>
+  </footer>
 
 </body>
 
