--- a/ondas.html
+++ b/ondas.html
@@ -426,9 +426,9 @@
       </figure>
     </div>
     <figcaption>
-    <p class="ref-imagens6">Fonte: MELO, 2018
-    </p>
-  </figcaption>
+      <p class="ref-imagens6">Fonte: MELO, 2018
+      </p>
+    </figcaption>
 
     <h1 class="titulos"> Refêrencias </h1>
 
@@ -483,13 +483,9 @@
       <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
     </div>
     <div class="cabeca12">
-      <img
-        src="Imagens/Logo_IFC_horizontal.gif"
-        alt="Logo IFC"
-        width="80%"
-      />
+      <img src="Imagens/Logo_IFC_horizontal.gif" alt="Logo IFC" width="80%" />
     </div>
-</footer>
+  </footer>
 </body>
 
 </html>
