update nessa bomba

--- a/ondas.html
+++ b/ondas.html
@@ -473,18 +473,23 @@
 
   </main>
 
-  <footer>
-    <div class="cabeca12">
-      <h4>Desenvolvedores:</h4>
-      <p>Anthony Gabriel Loche dos Reis</p>
-      <p>Claudio Anzini Neto</p>
-      <p>Jonatas Silva Peraza</p>
-      <p>Pedro Henrique da Silva Malaquias</p>
-      <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+  <footer class="rodape">
+    <div class="texto-rodape">
+      <div class="parte-rodape-esquerdo">
+        <h4>Desenvolvedores:
+        </h4>
+        <strong class="cabeca12">
+          <p>Anthony Gabriel Loche dos Reis <br>
+            Claudio Anzini Neto <br>
+            Pedro Henrique da Silva Malaquias <br>
+            Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+        </strong>
+      </div>
     </div>
-    <div class="cabeca12">
-      <img src="Imagens/Logo_IFC_horizontal.gif" alt="Logo IFC" width="80%" />
-    </div>
+
+
+    <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif" alt="Logo IFC"
+          width="300px"></strong></div>
   </footer>
 </body>
 
