--- a/bibliografia.html
+++ b/bibliografia.html
@@ -350,11 +350,10 @@
         <h4>Desenvolvedores:
         </h4>
         <strong class="cabeca12">
-          <p>Anthony Gabriel Loche dos Reis </p>
-          <p> Anzini Neto </p>
-          <p>Gustavo Correa Kruger </p>
-          <p>Pedro Henrique da Silva Malaquias </p>
-          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+          <p>Anthony Gabriel Loche dos Reis <br>
+            Claudio Anzini Neto <br>
+            Pedro Henrique da Silva Malaquias <br>
+            Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
         </strong>
       </div>
     </div>
