--- a/eletricidade.html
+++ b/eletricidade.html
@@ -203,10 +203,10 @@
         <h4>Desenvolvedores:
         </h4>
         <strong class="cabeca12">
-          <p>Anthony Gabriel Loche dos Reis </p>
-          <p>Claudio Anzini Neto </p>
-          <p>Pedro Henrique da Silva Malaquias </p>
-          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+          <p>Anthony Gabriel Loche dos Reis <br>
+            Claudio Anzini Neto <br>
+            Pedro Henrique da Silva Malaquias <br>
+            Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
         </strong>
       </div>
     </div>
