--- a/ondas.html
+++ b/ondas.html
@@ -142,6 +142,18 @@
             <span class="circle"></span>
           </span>
         </button>
+
+        <button type="button" onclick="window.open('contato.html')" class="btn">
+          <strong>Contato</strong>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
+
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
       </nav>
     </div>
     <div class="buscas">
